# farmore-node

./: .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  deny.toml
.github/workflows/: ci.yml
deploy/: farmore-node.env.example  farmore-node.service  farmore-resolver.env.example  farmore-resolver.service  setup-oracle.sh
docs/: RUN-TESTNET-SERVICES.md  RUNNING-A-NODE.md  RUNNING-A-RESOLVER.md  TESTNET-STATUS.md
e2e/: Cargo.toml
e2e/src/: lib.rs
e2e/tests/: loop.rs
node/: Cargo.toml
node/src/: config.rs  lib.rs  main.rs  state.rs
resolver/: Cargo.toml
resolver/src/: main.rs
